<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="app_name">Glitch Skills</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode ></string>
    <string name="action_label_bak">Action Bar Background ></string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
    <string name="widget_name">Glitch Skills</string>
    <string name="widget_icon_content_description">This is an icon representing the skill you are trying to learn.</string>
    <string name="widget_skill_description_text">Contacting Glitch server\u2026</string>
    <string name="widget_not_learning">You\'re wasting time not learning something! Click on your Glitch and choose something new to learn.</string>
    <string name="widget_skill_title_text">Glitch Skills</string>
    <string name="widget_skill_time_to_learn_label_text">ETA:</string>
    <string name="skills_list_item_description">This is where the skill description will be.</string>
    <string name="skill_time_to_learn_label_text">Done in:</string>
    <string name="skill_time_to_learn_text">1 day 15 hours 3 minutes 1 second</string>
    <string name="skill_title_text">Skill Title</string>
    <string name="widget_skill_s_finished_learning">Skill \'%s\' finished learning.</string>
    <string name="widget_unknown_glitch">I haven\'t got the foggiest idea who you are, so click the icon and enlighten me.</string>
    <string name="learn">Learn</string>
    <string name="unlearn">Unlearn</string>
    <string name="cancel_unlearn">Cancel Unlearning</string>
    <string name="queue">Queue</string>

    <!-- Label for this package -->
    <string name="label">SamplesyncAdapter</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string name="notification_login_error">Touch to sign into your Sample SyncAdapter account.</string>

    <!-- Title string for Login activity -->
    <string name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>

    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.    -->
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string name="cancel_button_label">Cancel</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>

</resources>