<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.github.droidfu.widgets.WebImageView
        android:id="@+id/skill_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="3dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/skill_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skill_title"
        android:layout_below="@+id/skill_title"
        android:paddingBottom="3dp"
        android:text="@string/skills_list_item_description"
        android:textSize="8pt" >
    </TextView>

    <ProgressBar
        android:id="@+id/skill_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skill_description"
        android:layout_below="@+id/skill_description"
        android:padding="3dp" >
    </ProgressBar>

    <TextView
        android:id="@+id/skill_time_to_learn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skill_progress"
        android:layout_below="@+id/skill_progress"
        android:layout_marginBottom="5dp"
        android:text="@string/skill_time_to_learn_label_text"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>

    <TextView
        android:id="@+id/skill_time_to_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/skill_time_to_learn_label"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/skill_time_to_learn_label"
        android:maxLines="3"
        android:minLines="1"
        android:text="@string/skill_time_to_learn_text"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>

    <TextView
        android:id="@+id/skill_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/skill_icon"
        android:text="@string/skill_title_text"
        android:textSize="10pt"
        android:textStyle="bold" >
    </TextView>

</RelativeLayout>