<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="#77000000"
    android:padding="3dp" >

    <RelativeLayout
        android:id="@+id/skill_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/skill_icon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#0000"
            android:contentDescription="@string/widget_icon_content_description"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon" />

        <ProgressBar
            android:id="@+id/skill_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/skill_title"
            android:layout_below="@id/skill_title" >
        </ProgressBar>

        <TextView
            android:id="@+id/skill_time_to_learn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/skill_title"
            android:layout_below="@+id/skill_progress"
            android:text="@string/widget_skill_time_to_learn_label_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" >
        </TextView>

        <TextView
            android:id="@+id/skill_time_to_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/skill_time_to_learn_label"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/skill_time_to_learn_label"
            android:maxLines="3"
            android:minLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" >
        </TextView>

        <TextView
            android:id="@+id/skill_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/skill_icon"
            android:shadowColor="#000"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/widget_skill_title_text"
            android:textColor="#fff"
            android:textSize="10pt"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/skill_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skill_info_layout"
        android:layout_marginTop="5dp"
        android:shadowColor="#4000"
        android:shadowDy="0.5"
        android:shadowRadius="0.5"
        android:text="@string/widget_skill_description_text"
        android:textColor="#fff"
        android:textSize="7pt" />

</RelativeLayout>